--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "bootstrap": "4.5.0",
     "jquery": "3.5.1",
-    "popper.js": "1.16.0"
+    "popper.js": "1.16.0",
+    "rails-ujs": "^5.2.8-1"
   }
 }
